--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,6 @@
   filter: drop-shadow(10px 10px 5px #3e2d8f);
 }
 
-.weather-head-wrapper {
-  margin: 3vh 0;
-}
-
 .city-name {
   font-size: 2rem;
   font-weight: bold;
@@ -40,7 +36,11 @@
   width: 400px;
   height: 100%;
   border-radius: 20px 20px 0px 0px;
-  background: linear-gradient(230deg, #3e2d8f 20%, rgba(157, 82, 172, 0.75) 100%);
+  background: linear-gradient(
+    230deg,
+    #3e2d8f 20%,
+    rgba(157, 82, 172, 0.75) 100%
+  );
 }
 
 .today-date {
@@ -68,6 +68,15 @@
   justify-content: center;
   align-items: center;
   padding: 10px 0;
+}
+
+@media (max-width: 1024px) {
+  .weather-today-wrapper {
+    margin-top: 50px;
+    padding-top: 600px;
+    background-size: 900px;
+    background-position: center;
+  }
 }
 
 @media (max-width: 576px) {
