--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@
   padding-top: 12rem;
   display: flex;
   justify-content: end;
-  background-image: url("/public/img/house.png");
+  background-image: url("/img/house.png");
   background-repeat: no-repeat;
   background-size: 450px;
   background-position: 150px;
