--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,43 @@
   text-align: center;
 }
 
+.spinner {
+  width: 50px;
+  height: 50px;
+  border: 5px solid #f3f3f3;
+  border-top: 5px solid #3498db;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+  margin: 75px auto;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 .weather-icon {
   filter: drop-shadow(10px 10px 5px #3e2d8f);
+}
+
+.valid-desc {
+  display: none;
+}
+
+.invalid-desc {
+  font-weight: bold;
+  display: block;
+  animation: blinker 1s linear infinite;
+}
+
+@keyframes blinker {
+  50% {
+    opacity: 0;
+  }
 }
 
 .city-name {
